<resources>
    <string name="app_name">Hangman</string>
    <string name="button_guess">Guess</string>
    <string name="make_guess_hint">Make a guess</string>
    <string name="start_game_button">Start</string>
    <string name="restart_game_button">Restart</string>
    <string name="quit_game_button">Quit</string>
    <string name="reconnect_game_button">Reconnect</string>

    <string name="remaining_guess_prefix">Remaining guesses: </string>
    <string name="score_prefix">Score: </string>
    <string name="secret_prefix">The word was: </string>
    <string name="guessed_prefix">Guessed: </string>
    <string name="settings">Settings</string>

    <string name="settings_hostname">Hostname</string>
    <string name="settings_port">Port</string>
    <string name="settings_title">Set remote host</string>
    <string name="start_screen_prompt">Press start to begin</string>
    <string name="score_label">Score:</string>
    <string name="remaining_guesses_label">Remaining guesses:</string>

</resources>
