<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingBottom="20dp"
        android:text="@string/settings_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/hostnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/settings_hostname" />

    <EditText
        android:id="@+id/hostnameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="192.168.0.5"
        app:layout_constraintTop_toBottomOf="@id/hostnameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number|numberDecimal|text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hostnameEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/settings_port" />

    <EditText
        android:id="@+id/portEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="4455"
        app:layout_constraintTop_toBottomOf="@+id/portLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="number" >
    </EditText>

</android.support.constraint.ConstraintLayout>